# extremeg

./: .gitignore  CMakeLists.txt  README.md  extremeg.recomp.toml  symbols.toml
src/: audio.cpp  main.cpp  os_stubs.cpp  rt64_render_context.cpp  section_table.cpp  stubs.cpp
tools/: build_recomp_rom.py  lzss_decompress.py  progress.py  rom_analyzer.py  string_dumper.py
